added images to the web page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             </ul>
         <h2>You might also like</h2>
         <a href="http://www.theonion.com/articles/cia-to-shift-focus-to-greeting-cards,4312/ ">CIA to shift focus to creating cards</a>
+<br>
+<!-- bonus -->
+<img src="t2.jpeg" width="400px;" height="400px;">
+<img src="t3.jpg" alt="" width="400px;" height="400px;">
+<img src="ttt1.jpg" alt="" width="400px;" height="400px;">
+
 
         <!-- 
             NOTE: 
