added css files for styling

--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html>
     <head>
         <title>silly CIA quiz</title>
+        <link rel="stylesheet" href="style.css">
     <head>
     <body style="background-color: azure">
-        <h1>CIA Realizes It's Been using Black Highlighters All These Years</h1>
+        <h1 class="green-header">CIA Realizes It's Been using Black Highlighters All These Years</h1>
         
-        <h2>Directors Demands Investigations</h2>
-        <img src="https://images.unsplash.com/photo-1561471267-4c666340322e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" width="350px;" height="400px;">
-        <h2>LANGLEY, VA- A report released Tuesday by the CIA's office of the Inspector General revealed that the CIA has mistakenly obscured hundreds of thousands of pages of critical intelligence information with black highlighters 
-        </h2>
-        <h2>According to the report, sections of the documents— "almost invariably the most crucial passages"—are marred by an indelible black ink that renders the lines impossible to read, due to a top-secret highlighting policy that began at the agency's inception in 1947.
-        </h2>
-        <h2>
+        <h2 class="green-subhead">Directors Demands Investigations</h2>
+        <img src="https://images.unsplash.com/photo-1561471267-4c666340322e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" width="250px;" height="200px;" class="left-image">
+        <p>LANGLEY, VA- A report released Tuesday by the CIA's office of the Inspector General revealed that the CIA has mistakenly obscured hundreds of thousands of pages of critical intelligence information with black highlighters 
+        </p>
+        <p>According to the report, sections of the documents— "almost invariably the most crucial passages"—are marred by an indelible black ink that renders the lines impossible to read, due to a top-secret highlighting policy that began at the agency's inception in 1947.
+        </p>
+        <p>
                 CIA Director <strong>Porter Goss</strong> lamented the fact that the public will probably never know the particulars of several historic events, such as: 
         </h2>
             <ul>
@@ -20,13 +21,12 @@
                 <li>the civil-rights movements</li>
                 <li>the growth of the internation drug trad</li>
             </ul>
-        <h2>You might also like</h2>
+            <br>
+        <p class="upper-p">You might also like</p>
         <a href="http://www.theonion.com/articles/cia-to-shift-focus-to-greeting-cards,4312/ ">CIA to shift focus to creating cards</a>
 <br>
 <!-- bonus -->
-<img src="t2.jpeg" width="400px;" height="400px;">
-<img src="t3.jpg" alt="" width="400px;" height="400px;">
-<img src="ttt1.jpg" alt="" width="400px;" height="400px;">
+
 
 
         <!-- 
@@ -35,6 +35,18 @@
         * Be sure to turn the bulleted historic events into a list. 
         * Bold Porter Goss's name on first reference
         * Turn this note into a comment
+
+Make the main headline dark green.
+Use the font family "Georgia" for the main headline and the sub-headline.
+Center the text of the main headline and the sub-headline.
+Make the paragraphs have a line height of 25 pixels.
+Remove the underline from the links.
+Make the "You might also like" label all uppercase.
+Bonus: Make an underline appear when you hover over a link.
+Bonus: Make the image 'float' to the left of the body content.
+
+
+
         -->
     </body>
 <html>
