second test for the purpose of hosting

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <title>silly CIA quiz</title>
         <link rel="stylesheet" href="style.css">
     <head>
+
     <body style="background-color: azure">
+            <a href="index2.html">Go to Next Page</a>
         <h1 class="green-header">CIA Realizes It's Been using Black Highlighters All These Years</h1>
         
         <h2 class="green-subhead">Directors Demands Investigations</h2>
